--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "library",
-  "version": "1.0.0",
+  "name": "@artemveremienko/component-library",
+  "version": "1.0.2",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/artemveremienko"
+  },
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -19,9 +22,6 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.2",
     "@rollup/plugin-commonjs": "^21.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
@@ -33,11 +33,16 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/react": "^17.0.39",
     "babel-loader": "^8.2.5",
-    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.2",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^4.6.3"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.2"
   }
 }
