--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@artemveremienko/component-library",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/artemveremienko"
   },
@@ -39,7 +39,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^4.6.3"
   },
-  "peerDependencies": {
+  "dependencies": {
     "react": "^17.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
