--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@artemveremienko/component-library",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/artemveremienko"
   },
@@ -37,13 +37,14 @@
     "rollup": "^2.70.2",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "^4.6.3",
-    "react": "^17.0.2"
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2"
   },
-  "peerDependencies": {}
+  "peerDependencies": {
+    "react": "^17.0.2"
+  }
 }
