--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/artemveremienko"
   },
-  "description": "",
+  "description": "Simple UI kit for React based on MUI",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/types/main.d.ts",
@@ -13,11 +13,17 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "ts": "tsc --noEmit --emitDeclarationOnly false",
+    "tscheck": "tsc --noEmit --emitDeclarationOnly false",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build:publish": "npm run build && npm publish"
   },
-  "keywords": [],
+  "keywords": [
+    "ui",
+    "kit",
+    "react",
+    "mui"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -41,9 +47,9 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "^17.0.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.2"
+    "react": "~17.0.2",
+    "@emotion/styled": "~11.8.1",
+    "@emotion/react": "~11.9.0",
+    "@mui/material": "~5.6.2"
   }
 }
