--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@artemveremienko/component-library",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/artemveremienko"
   },
@@ -39,7 +39,6 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/react": "^17.0.39",
     "babel-loader": "^8.2.5",
-    "react-dom": "^17.0.2",
     "rollup": "^2.70.2",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -48,6 +47,7 @@
   "dependencies": {},
   "peerDependencies": {
     "react": "~17.0.2",
+    "react-dom": "~17.0.2",
     "@emotion/styled": "~11.8.1",
     "@emotion/react": "~11.9.0",
     "@mui/material": "~5.6.2"
