--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@artemveremienko/component-library",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/artemveremienko"
   },
@@ -43,12 +43,13 @@
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "react-dom": "~17.0.2",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.3"
+  },
+  "dependencies": {},
+  "peerDependencies": {
     "react": "~17.0.2",
     "@mui/material": "~5.6.2",
     "@emotion/react": "~11.9.0",
     "@emotion/styled": "~11.8.1"
-  },
-  "dependencies": {},
-  "peerDependencies": {}
+  }
 }
