--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@artemveremienko/component-library",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/artemveremienko"
+    "registry": "https://npm.pkg.github.com/artemveremienko",
+    "access": "public"
   },
   "description": "Simple UI kit for React based on MUI",
   "main": "dist/index.js",
@@ -39,17 +40,16 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/react": "^17.0.39",
     "babel-loader": "^8.2.5",
+    "react-dom": "^17.0.2",
     "rollup": "^2.70.2",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "react-dom": "~17.0.2",
     "typescript": "^4.6.3"
   },
-  "dependencies": {},
   "peerDependencies": {
-    "react": "~17.0.2",
-    "@mui/material": "~5.6.2",
     "@emotion/react": "~11.9.0",
-    "@emotion/styled": "~11.8.1"
+    "@emotion/styled": "~11.8.1",
+    "@mui/material": "~5.6.2",
+    "react": "~17.0.2"
   }
 }
