--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@artemveremienko/component-library",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/artemveremienko",
-    "access": "public"
+    "registry": "https://npm.pkg.github.com/artemveremienko"
   },
   "description": "Simple UI kit for React based on MUI",
   "main": "dist/index.js",
@@ -13,11 +12,12 @@
     "dist"
   ],
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "rollup -c",
     "tscheck": "tsc --noEmit --emitDeclarationOnly false",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build:publish": "npm run build && npm publish"
+    "prepublish": "npm run tscheck && npm run build"
   },
   "keywords": [
     "ui",
@@ -29,6 +29,9 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
     "@rollup/plugin-commonjs": "^21.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
@@ -40,16 +43,19 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/react": "^17.0.39",
     "babel-loader": "^8.2.5",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.2",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "^4.6.3"
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0"
   },
   "peerDependencies": {
-    "@emotion/react": "~11.9.0",
-    "@emotion/styled": "~11.8.1",
-    "@mui/material": "~5.6.2",
-    "react": "~17.0.2"
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
+    "react": "^17.0.2"
   }
 }
