--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tscheck": "tsc --noEmit --emitDeclarationOnly false",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepublish": "npm run tscheck && npm run build"
+    "prepublishOnly": "npm run tscheck && npm run build"
   },
   "keywords": [
     "ui",
